<resources>
    <string name="app_name">ControlLightMVVM</string>
    <string name="osterrig_db">Osterrig.db</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc_text_search_button">Search</string>
    <string name="desc_text_add_group_button">Add group</string>
    <string name="desc_device_list">Device List</string>
    <string name="desc_power_button">Power button</string>
    <string name="desc_battery_level">Battery level</string>
    <string name="desc_function_button">Function Button</string>
    <string name="hint_name_device">Name device</string>

    <string name="devices_no_sabers">No sabers</string>
    <string name="groups_no_groups">No groups</string>
    <string name="toast_bt_must_be_enabled">Для работы приложения необходимо включить Bluetooth</string>
    <string name="toast_location_permission">Для работы приложения необходимо предоставить необходимые разрешения</string>
    <string name="title_tab_sabers">Sabers</string>
    <string name="title_tab_groups">Groups</string>
    <string name="title_tab_rgb_control">RGB</string>
    <string name="title_tab_cct_control">CCT</string>
    <string name="title_tab_ftp_control">FTP</string>
    <string name="title_tab_fnc_control">FNC</string>
    <string name="title_dialog_color_picker">Color Picker</string>
    <string name="title_dialog_functions">Function list</string>
    <string name="title_dialog_flame_settings">Flame Settings</string>
    <string name="title_dialog_create_group">Create group</string>
    <string name="title_dialog_select_group">Select Group</string>

    <string name="tv_lightness">Lightness: %d%%</string>
    <string name="tv_tint">Tint: %d</string>
    <string name="tv_tint_min">-50</string>
    <string name="tv_tint_max">+50</string>

    <string name="tv_sharp">Sharp</string>
    <string name="tv_smooth">Smooth</string>

    <string name="tv_label_red">R:</string>
    <string name="tv_label_green">G:</string>
    <string name="tv_label_blue">B:</string>

    <string name="tv_connect">Connect</string>
    <string name="tv_sparking">Sparking</string>
    <string name="tv_cooling">Cooling</string>

    <string name="preset_color_1">#ff0000</string>
    <string name="preset_color_2">#00ff00</string>
    <string name="preset_color_3">#0000ff</string>
    <string name="preset_color_4">#ff00ff</string>
    <string name="button_select">Select</string>
    <string name="tv_temperature">Temperature (kalvin):</string>
    <string name="tv_label_saturation">S:</string>



    <string-array name="function_count_colors">
        <item>2</item>
        <item>4</item>
        <item>8</item>
    </string-array>

    <string-array name="function_smooth_type">
        <item>Smooth</item>
        <item>Sharp</item>
    </string-array>

    <string-array name="function_item_color_2">
        <item>Color 1</item>
        <item>Color 2</item>
    </string-array>

    <string-array name="function_item_color_4">
        <item>Color 1</item>
        <item>Color 2</item>
        <item>Color 3</item>
        <item>Color 4</item>
    </string-array>

    <string-array name="function_item_color_8">
        <item>Color 1</item>
        <item>Color 2</item>
        <item>Color 3</item>
        <item>Color 4</item>
        <item>Color 5</item>
        <item>Color 6</item>
        <item>Color 7</item>
        <item>Color 8</item>
    </string-array>

    <string-array name="function_fade_strobe">
        <item>Fade</item>
        <item>Strobe</item>
    </string-array>

    <string-array name="function_fire_options">
        <item>Cooling</item>
        <item>Sparking</item>
    </string-array>

</resources>