<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="@color/top_control_panel"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/dialog_title_text_color"
            android:textSize="@dimen/dialog_title_text_size"
            android:text="@string/title_dialog_flame_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvSparkingLabel"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/tv_sparking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/sbSparking"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:max="300"
        style="@style/SeekBarLightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCoolingLabel"
        android:text="@string/tv_cooling"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <SeekBar
        android:id="@+id/sbCooling"
        android:max="170"
        style="@style/SeekBarLightness"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/maximal_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <FrameLayout
        android:background="@color/top_control_panel"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/btnOk"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/dialog_title_text_color"
            android:textSize="@dimen/dialog_title_text_size"
            android:text="OK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

</LinearLayout>