<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".view.screen_ftp_rgb_control.FtpRgbControlFragment">

    <FrameLayout
        android:id="@+id/containerTopControlPanel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_control_panel_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/topControlPanel"
            layout="@layout/include_top_control_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <View
        android:id="@+id/colorPreview"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/containerTopControlPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/containerControlColor"
        android:background="@drawable/drawable_color_preview_corners"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/tvColorPreviewIndicator"
        android:text="#000000"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="@id/colorPreview"
        app:layout_constraintBottom_toBottomOf="@id/colorPreview"
        app:layout_constraintStart_toStartOf="@id/colorPreview"
        app:layout_constraintEnd_toEndOf="@id/colorPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/containerControlColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/colorPreview"
        app:layout_constraintBottom_toTopOf="@id/containerBottomNavPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLabelRed"
                android:text="@string/tv_label_red"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights" />

            <SeekBar
                android:id="@+id/sbRedColor"
                android:max="255"
                android:layout_gravity="center_vertical"
                style="@style/SeekBarLightness"
                android:layout_weight="100"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPreviewRed"
                android:text="222"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLabelGreen"
                android:text="@string/tv_label_green"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights" />

            <SeekBar
                android:id="@+id/sbGreenColor"
                android:max="255"
                android:layout_gravity="center_vertical"
                style="@style/SeekBarLightness"
                android:layout_weight="100"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPreviewGreen"
                android:text="222"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLabelBlue"
                android:text="@string/tv_label_blue"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights" />

            <SeekBar
                android:id="@+id/sbBlueColor"
                android:max="255"
                style="@style/SeekBarLightness"
                android:layout_gravity="center_vertical"
                android:layout_weight="100"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPreviewBlue"
                android:text="222"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerBottomNavPanel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_nav_panel_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/bottomNavPanel"
            layout="@layout/include_bottom_nav_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>